Migrate code base to Java 11 (#91)
* Use local variable type inference when appropriate

* Use List.of when applicable

* Use Map.of when appropriate

* Remove more use of Guava, use Predicate.not when appropriate

* Simplify Stream<Optional> expressions

* Apply PR feedback

* Use local variable type inference in tests also