@@ -22,6 +22,7 @@ package org.sonarsource.sonarlint.ls;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
@@ -34,88 +35,87 @@ import org.sonarsource.sonarlint.core.client.api.standalone.StandaloneSonarLintE
 import org.sonarsource.sonarlint.ls.log.LanguageClientLogOutput;
 
 import static java.net.URI.create;
-import static java.util.Arrays.asList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 
-public class EnginesFactoryTests {
+class EnginesFactoryTests {
 
   private static final Path FAKE_TYPESCRIPT_PATH = Paths.get("some/path");
   private EnginesFactory underTest;
 
   @BeforeEach
-  public void prepare() throws Exception {
-    underTest = new EnginesFactory(asList(create("file://plugin1.jar").toURL(), create("file://plugin2.jar").toURL()), mock(LanguageClientLogOutput.class), mock(NodeJsRuntime.class), mock(ModulesProvider.class), Collections.emptyList());
+  void prepare() throws Exception {
+    underTest = new EnginesFactory(List.of(create("file://plugin1.jar").toURL(), create("file://plugin2.jar").toURL()), mock(LanguageClientLogOutput.class), mock(NodeJsRuntime.class), mock(ModulesProvider.class), Collections.emptyList());
     underTest = spy(underTest);
   }
 
   @Test
-  public void pass_typescript_path_to_standalone_engine() throws Exception {
+  void pass_typescript_path_to_standalone_engine() throws Exception {
     underTest.initialize(FAKE_TYPESCRIPT_PATH);
 
-    ArgumentCaptor<StandaloneGlobalConfiguration> argCaptor = ArgumentCaptor.forClass(StandaloneGlobalConfiguration.class);
-    StandaloneSonarLintEngine mockEngine = mock(StandaloneSonarLintEngine.class);
+    var argCaptor = ArgumentCaptor.forClass(StandaloneGlobalConfiguration.class);
+    var mockEngine = mock(StandaloneSonarLintEngine.class);
     doReturn(mockEngine).when(underTest).newStandaloneEngine(argCaptor.capture());
 
-    StandaloneSonarLintEngine createdEngine = underTest.createStandaloneEngine();
+    var createdEngine = underTest.createStandaloneEngine();
 
     assertThat(createdEngine).isSameAs(mockEngine);
-    StandaloneGlobalConfiguration capturedConfig = argCaptor.getValue();
+    var capturedConfig = argCaptor.getValue();
     assertThat(capturedConfig.extraProperties()).containsEntry("sonar.typescript.internal.typescriptLocation", FAKE_TYPESCRIPT_PATH.toString());
     assertThat(capturedConfig.getEnabledLanguages()).containsOnly(Language.HTML, Language.JAVA, Language.JS, Language.PHP, Language.PYTHON, Language.SECRETS, Language.TS);
   }
 
   @Test
-  public void no_typescript_to_standalone_engine() throws Exception {
+  void no_typescript_to_standalone_engine() throws Exception {
     underTest.initialize(null);
 
-    ArgumentCaptor<StandaloneGlobalConfiguration> argCaptor = ArgumentCaptor.forClass(StandaloneGlobalConfiguration.class);
-    StandaloneSonarLintEngine mockEngine = mock(StandaloneSonarLintEngine.class);
+    var argCaptor = ArgumentCaptor.forClass(StandaloneGlobalConfiguration.class);
+    var mockEngine = mock(StandaloneSonarLintEngine.class);
     doReturn(mockEngine).when(underTest).newStandaloneEngine(argCaptor.capture());
 
-    StandaloneSonarLintEngine createdEngine = underTest.createStandaloneEngine();
+    var createdEngine = underTest.createStandaloneEngine();
 
     assertThat(createdEngine).isSameAs(mockEngine);
-    StandaloneGlobalConfiguration capturedConfig = argCaptor.getValue();
+    var capturedConfig = argCaptor.getValue();
     assertThat(capturedConfig.extraProperties()).isEmpty();
   }
 
   @Test
-  public void pass_typescript_path_to_connected_engine() throws Exception {
+  void pass_typescript_path_to_connected_engine() throws Exception {
     underTest.initialize(FAKE_TYPESCRIPT_PATH);
 
-    ArgumentCaptor<ConnectedGlobalConfiguration> argCaptor = ArgumentCaptor.forClass(ConnectedGlobalConfiguration.class);
-    ConnectedSonarLintEngine mockEngine = mock(ConnectedSonarLintEngine.class);
+    var argCaptor = ArgumentCaptor.forClass(ConnectedGlobalConfiguration.class);
+    var mockEngine = mock(ConnectedSonarLintEngine.class);
     doReturn(mockEngine).when(underTest).newConnectedEngine(argCaptor.capture());
 
-    ConnectedSonarLintEngine createdEngine = underTest.createConnectedEngine("foo");
+    var createdEngine = underTest.createConnectedEngine("foo");
 
     assertThat(createdEngine).isSameAs(mockEngine);
-    ConnectedGlobalConfiguration capturedConfig = argCaptor.getValue();
+    var capturedConfig = argCaptor.getValue();
     assertThat(capturedConfig.extraProperties()).containsEntry("sonar.typescript.internal.typescriptLocation", FAKE_TYPESCRIPT_PATH.toString());
     assertThat(capturedConfig.getEnabledLanguages()).containsOnly(Language.APEX, Language.HTML, Language.JAVA, Language.JS, Language.PHP, Language.PLSQL, Language.PYTHON, Language.SECRETS, Language.TS);
   }
 
   @Test
-  public void no_typescript_to_connected_engine() throws Exception {
+  void no_typescript_to_connected_engine() throws Exception {
     underTest.initialize(null);
 
-    ArgumentCaptor<ConnectedGlobalConfiguration> argCaptor = ArgumentCaptor.forClass(ConnectedGlobalConfiguration.class);
-    ConnectedSonarLintEngine mockEngine = mock(ConnectedSonarLintEngine.class);
+    var argCaptor = ArgumentCaptor.forClass(ConnectedGlobalConfiguration.class);
+    var mockEngine = mock(ConnectedSonarLintEngine.class);
     doReturn(mockEngine).when(underTest).newConnectedEngine(argCaptor.capture());
 
-    ConnectedSonarLintEngine createdEngine = underTest.createConnectedEngine("foo");
+    var createdEngine = underTest.createConnectedEngine("foo");
 
     assertThat(createdEngine).isSameAs(mockEngine);
-    ConnectedGlobalConfiguration capturedConfig = argCaptor.getValue();
+    var capturedConfig = argCaptor.getValue();
     assertThat(capturedConfig.extraProperties()).isEmpty();
   }
 
   @Test
-  public void get_standalone_languages() {
+  void get_standalone_languages() {
     assertThat(EnginesFactory.getStandaloneLanguages()).containsExactlyInAnyOrder(
       Language.HTML,
       Language.JAVA,
@@ -128,7 +128,7 @@ public class EnginesFactoryTests {
   }
 
   @Test
-  public void resolve_extra_plugin_key() {
+  void resolve_extra_plugin_key() {
     assertThat(EnginesFactory.guessPluginKey("file:///sonarsecrets.jar")).isEqualTo(Language.SECRETS.getPluginKey());
     assertThatThrownBy(() -> EnginesFactory.guessPluginKey("file:///unknown.jar"))
       .isInstanceOf(IllegalStateException.class)
