@@ -21,8 +21,8 @@ package org.sonarsource.sonarlint.ls.connected.notifications;
 
 
 import java.time.ZonedDateTime;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import org.eclipse.lsp4j.MessageActionItem;
 import org.eclipse.lsp4j.ShowMessageRequestParams;
@@ -31,7 +31,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.sonarsource.sonarlint.core.client.api.common.LogOutput;
-import org.sonarsource.sonarlint.core.client.api.notifications.ServerNotification;
 import org.sonarsource.sonarlint.core.container.model.DefaultServerNotification;
 import org.sonarsource.sonarlint.ls.SonarLintExtendedLanguageClient;
 import org.sonarsource.sonarlint.ls.SonarLintTelemetry;
@@ -49,8 +48,8 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
-import static org.mockito.Mockito.verifyZeroInteractions;
 import static org.mockito.Mockito.when;
 
 class ServerNotificationsTest {
@@ -81,26 +80,26 @@ class ServerNotificationsTest {
   @Test
   void doNothingOnEmptyFolderSettings() {
     underTest.onChange(null, null, mock(WorkspaceFolderSettings.class));
-    verifyZeroInteractions(output);
+    verifyNoInteractions(output);
   }
 
   @Test
   void registerOnlyOnceWithFullSettings() {
-    String connectionId = "connectionId";
-    String projectKey = "projectKey";
+    var connectionId = "connectionId";
+    var projectKey = "projectKey";
 
-    WorkspaceSettings newWorkspaceSettings = mock(WorkspaceSettings.class);
-    ServerConnectionSettings settings = new ServerConnectionSettings(connectionId, "http://my.sq", "token", null, false, httpClient);
+    var newWorkspaceSettings = mock(WorkspaceSettings.class);
+    var settings = new ServerConnectionSettings(connectionId, "http://my.sq", "token", null, false, httpClient);
     when(newWorkspaceSettings.getServerConnections()).thenReturn(Collections.singletonMap(connectionId, settings));
     underTest.onChange(mock(WorkspaceSettings.class), newWorkspaceSettings);
 
-    WorkspaceFolderWrapper folder1 = mock(WorkspaceFolderWrapper.class);
-    WorkspaceFolderSettings newFolderSettings1 = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
+    var folder1 = mock(WorkspaceFolderWrapper.class);
+    var newFolderSettings1 = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
     underTest.onChange(folder1, null, newFolderSettings1);
 
     // Same settings, only one registration sent
-    WorkspaceFolderWrapper folder2 = mock(WorkspaceFolderWrapper.class);
-    WorkspaceFolderSettings newFolderSettings2 = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
+    var folder2 = mock(WorkspaceFolderWrapper.class);
+    var newFolderSettings2 = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
     underTest.onChange(folder2, null, newFolderSettings2);
 
     verify(output, times(1)).log("Enabling notifications for project 'projectKey' on connection 'connectionId'", LogOutput.Level.DEBUG);
@@ -109,22 +108,22 @@ class ServerNotificationsTest {
 
   @Test
   void register2FoldersOn2Projects() {
-    String connectionId = "connectionId";
-    String projectKey1 = "projectKey1";
-    String projectKey2 = "projectKey2";
+    var connectionId = "connectionId";
+    var projectKey1 = "projectKey1";
+    var projectKey2 = "projectKey2";
 
-    WorkspaceSettings newWorkspaceSettings = mock(WorkspaceSettings.class);
-    ServerConnectionSettings settings = new ServerConnectionSettings(connectionId, "http://my.sq", "token", null, false, httpClient);
+    var newWorkspaceSettings = mock(WorkspaceSettings.class);
+    var settings = new ServerConnectionSettings(connectionId, "http://my.sq", "token", null, false, httpClient);
     when(newWorkspaceSettings.getServerConnections()).thenReturn(Collections.singletonMap(connectionId, settings));
     underTest.onChange(mock(WorkspaceSettings.class), newWorkspaceSettings);
 
-    WorkspaceFolderWrapper folder1 = mock(WorkspaceFolderWrapper.class);
-    WorkspaceFolderSettings newFolderSettings1 = new WorkspaceFolderSettings(connectionId, projectKey1, Collections.emptyMap(), null);
+    var folder1 = mock(WorkspaceFolderWrapper.class);
+    var newFolderSettings1 = new WorkspaceFolderSettings(connectionId, projectKey1, Collections.emptyMap(), null);
     underTest.onChange(folder1, null, newFolderSettings1);
 
     // Same settings, only one registration sent
-    WorkspaceFolderWrapper folder2 = mock(WorkspaceFolderWrapper.class);
-    WorkspaceFolderSettings newFolderSettings2 = new WorkspaceFolderSettings(connectionId, projectKey2, Collections.emptyMap(), null);
+    var folder2 = mock(WorkspaceFolderWrapper.class);
+    var newFolderSettings2 = new WorkspaceFolderSettings(connectionId, projectKey2, Collections.emptyMap(), null);
     underTest.onChange(folder2, null, newFolderSettings2);
 
     verify(output, times(1)).log("Enabling notifications for project 'projectKey1' on connection 'connectionId'", LogOutput.Level.DEBUG);
@@ -134,21 +133,21 @@ class ServerNotificationsTest {
 
   @Test
   void registerThenUnregisterOnUnknownConnection() {
-    String connectionId = "connectionId";
-    String projectKey = "projectKey";
+    var connectionId = "connectionId";
+    var projectKey = "projectKey";
 
-    WorkspaceSettings newWorkspaceSettings = mock(WorkspaceSettings.class);
-    ServerConnectionSettings settings = new ServerConnectionSettings(connectionId, "http://my.sq", "token", null, false, httpClient);
+    var newWorkspaceSettings = mock(WorkspaceSettings.class);
+    var settings = new ServerConnectionSettings(connectionId, "http://my.sq", "token", null, false, httpClient);
     when(newWorkspaceSettings.getServerConnections()).thenReturn(Collections.singletonMap(connectionId, settings));
     underTest.onChange(mock(WorkspaceSettings.class), newWorkspaceSettings);
 
-    WorkspaceFolderWrapper folder = mock(WorkspaceFolderWrapper.class);
-    WorkspaceFolderSettings newFolderSettings1 = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
+    var folder = mock(WorkspaceFolderWrapper.class);
+    var newFolderSettings1 = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
     underTest.onChange(folder, null, newFolderSettings1);
 
     verify(output, times(1)).log("Enabling notifications for project 'projectKey' on connection 'connectionId'", LogOutput.Level.DEBUG);
 
-    WorkspaceFolderSettings newFolderSettings2 = new WorkspaceFolderSettings("otherConnectionId", projectKey, Collections.emptyMap(), null);
+    var newFolderSettings2 = new WorkspaceFolderSettings("otherConnectionId", projectKey, Collections.emptyMap(), null);
     underTest.onChange(folder, newFolderSettings1, newFolderSettings2);
 
     verify(output, times(1)).log("De-registering notifications for project 'projectKey' on connection 'connectionId'", LogOutput.Level.DEBUG);
@@ -157,21 +156,21 @@ class ServerNotificationsTest {
 
   @Test
   void doNothingOnUnknownConnectionThenRegisterOnWorkspaceSettingsChange() {
-    String connectionId = "connectionId";
-    String projectKey = "projectKey";
+    var connectionId = "connectionId";
+    var projectKey = "projectKey";
 
     // Initially, do not put any connection settings
-    WorkspaceSettings newWorkspaceSettings = mock(WorkspaceSettings.class);
+    var newWorkspaceSettings = mock(WorkspaceSettings.class);
     underTest.onChange(mock(WorkspaceSettings.class), newWorkspaceSettings);
 
     // Try to bind to unknown connection
-    WorkspaceFolderWrapper folder = mock(WorkspaceFolderWrapper.class);
-    WorkspaceFolderSettings newFolderSettings = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
+    var folder = mock(WorkspaceFolderWrapper.class);
+    var newFolderSettings = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
     underTest.onChange(folder, null, newFolderSettings);
 
     // Then fix connection settings with known connection
-    WorkspaceSettings newWorkspaceSettings2 = mock(WorkspaceSettings.class);
-    ServerConnectionSettings settings = new ServerConnectionSettings(connectionId, "http://my.sq", "token", null, false, httpClient);
+    var newWorkspaceSettings2 = mock(WorkspaceSettings.class);
+    var settings = new ServerConnectionSettings(connectionId, "http://my.sq", "token", null, false, httpClient);
     when(newWorkspaceSettings2.getServerConnections()).thenReturn(Collections.singletonMap(connectionId, settings));
     when(folder.getSettings()).thenReturn(newFolderSettings);
     when(workspaceFoldersManager.getAll()).thenReturn(Collections.singleton(folder));
@@ -183,44 +182,44 @@ class ServerNotificationsTest {
 
   @Test
   void doNothingOnDisabledConnection() {
-    String connectionId = "connectionId";
-    String projectKey = "projectKey";
+    var connectionId = "connectionId";
+    var projectKey = "projectKey";
 
-    WorkspaceSettings newWorkspaceSettings = mock(WorkspaceSettings.class);
-    ServerConnectionSettings serverConnectionSettings = new ServerConnectionSettings(connectionId, "", "", null, true, httpClient);
+    var newWorkspaceSettings = mock(WorkspaceSettings.class);
+    var serverConnectionSettings = new ServerConnectionSettings(connectionId, "", "", null, true, httpClient);
     when(newWorkspaceSettings.getServerConnections()).thenReturn(Collections.singletonMap(connectionId, serverConnectionSettings));
     underTest.onChange(mock(WorkspaceSettings.class), newWorkspaceSettings);
 
-    WorkspaceFolderSettings newFolderSettings = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
+    var newFolderSettings = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
     underTest.onChange(mock(WorkspaceFolderWrapper.class), mock(WorkspaceFolderSettings.class), newFolderSettings);
 
-    verifyZeroInteractions(output);
+    verifyNoInteractions(output);
     verify(workspaceFoldersManager).getAll();
   }
 
   @Test
   void doNothingOnEmptyWorkspaceSettings() {
     underTest.onChange(null, mock(WorkspaceSettings.class));
-    verifyZeroInteractions(output);
+    verifyNoInteractions(output);
     verify(workspaceFoldersManager).getAll();
   }
 
   @Test
   void updateRegistrationsOnWorkspaceSettingsChange() {
-    String connectionId = "connectionId";
-    String projectKey = "projectKey";
+    var connectionId = "connectionId";
+    var projectKey = "projectKey";
 
-    WorkspaceSettings newWorkspaceSettings1 = mock(WorkspaceSettings.class);
-    ServerConnectionSettings serverConnectionSettings = new ServerConnectionSettings(connectionId, "http://my.sq", "token", null, false, httpClient);
+    var newWorkspaceSettings1 = mock(WorkspaceSettings.class);
+    var serverConnectionSettings = new ServerConnectionSettings(connectionId, "http://my.sq", "token", null, false, httpClient);
     when(newWorkspaceSettings1.getServerConnections()).thenReturn(Collections.singletonMap(connectionId, serverConnectionSettings));
     underTest.onChange(mock(WorkspaceSettings.class), newWorkspaceSettings1);
 
-    WorkspaceFolderWrapper folder = mock(WorkspaceFolderWrapper.class);
-    WorkspaceFolderSettings newFolderSettings = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
+    var folder = mock(WorkspaceFolderWrapper.class);
+    var newFolderSettings = new WorkspaceFolderSettings(connectionId, projectKey, Collections.emptyMap(), null);
     underTest.onChange(folder, null, newFolderSettings);
 
-    WorkspaceSettings newWorkspaceSettings2 = mock(WorkspaceSettings.class);
-    ServerConnectionSettings settings = new ServerConnectionSettings(connectionId, "http://other.sq", "token", null, false, httpClient);
+    var newWorkspaceSettings2 = mock(WorkspaceSettings.class);
+    var settings = new ServerConnectionSettings(connectionId, "http://other.sq", "token", null, false, httpClient);
     when(newWorkspaceSettings2.getServerConnections()).thenReturn(Collections.singletonMap(connectionId, settings));
     underTest.onChange(mock(WorkspaceSettings.class), newWorkspaceSettings2);
 
@@ -231,75 +230,75 @@ class ServerNotificationsTest {
 
   @Test
   void shouldShowSonarQubeNotificationToUserAndClickOnNotificationLink() {
-    ServerNotifications.EventListener listener = underTest.new EventListener(false);
-    String category = "category";
-    String message = "message";
-    String link = "http://some.link";
-    String projectKey = "projectKey";
-    ServerNotification notification = new DefaultServerNotification(category, message, link, projectKey, ZonedDateTime.now());
+    var listener = underTest.new EventListener(false);
+    var category = "category";
+    var message = "message";
+    var link = "http://some.link";
+    var projectKey = "projectKey";
+    var notification = new DefaultServerNotification(category, message, link, projectKey, ZonedDateTime.now());
 
-    MessageActionItem browseAction = new MessageActionItem("Show on SonarQube");
-    MessageActionItem settingsAction = new MessageActionItem("Open Settings");
+    var browseAction = new MessageActionItem("Show on SonarQube");
+    var settingsAction = new MessageActionItem("Open Settings");
     when(client.showMessageRequest(any())).thenReturn(CompletableFuture.completedFuture(browseAction));
 
     listener.handle(notification);
 
     verify(telemetry).devNotificationsReceived(category);
-    ArgumentCaptor<ShowMessageRequestParams> messageCaptor = ArgumentCaptor.forClass(ShowMessageRequestParams.class);
+    var messageCaptor = ArgumentCaptor.forClass(ShowMessageRequestParams.class);
     verify(client).showMessageRequest(messageCaptor.capture());
-    ShowMessageRequestParams shownMessage = messageCaptor.getValue();
+    var shownMessage = messageCaptor.getValue();
     assertThat(shownMessage).extracting(ShowMessageRequestParams::getMessage, ShowMessageRequestParams::getActions)
-      .containsExactly("SonarQube Notification: message", Arrays.asList(browseAction, settingsAction));
+      .containsExactly("SonarQube Notification: message", List.of(browseAction, settingsAction));
     verify(telemetry).devNotificationsClicked(category);
     verify(client).browseTo(link);
   }
 
   @Test
   void shouldShowSonarQubeNotificationToUserAndOpenSettings() {
-    ServerNotifications.EventListener listener = underTest.new EventListener(false);
-    String category = "category";
-    String message = "message";
-    String link = "http://some.link";
-    String projectKey = "projectKey";
-    ServerNotification notification = new DefaultServerNotification(category, message, link, projectKey, ZonedDateTime.now());
+    var listener = underTest.new EventListener(false);
+    var category = "category";
+    var message = "message";
+    var link = "http://some.link";
+    var projectKey = "projectKey";
+    var notification = new DefaultServerNotification(category, message, link, projectKey, ZonedDateTime.now());
 
-    MessageActionItem browseAction = new MessageActionItem("Show on SonarQube");
-    MessageActionItem settingsAction = new MessageActionItem("Open Settings");
+    var browseAction = new MessageActionItem("Show on SonarQube");
+    var settingsAction = new MessageActionItem("Open Settings");
     when(client.showMessageRequest(any())).thenReturn(CompletableFuture.completedFuture(settingsAction));
 
     listener.handle(notification);
 
     verify(telemetry).devNotificationsReceived(category);
-    ArgumentCaptor<ShowMessageRequestParams> messageCaptor = ArgumentCaptor.forClass(ShowMessageRequestParams.class);
+    var messageCaptor = ArgumentCaptor.forClass(ShowMessageRequestParams.class);
     verify(client).showMessageRequest(messageCaptor.capture());
-    ShowMessageRequestParams shownMessage = messageCaptor.getValue();
+    var shownMessage = messageCaptor.getValue();
     assertThat(shownMessage).extracting(ShowMessageRequestParams::getMessage, ShowMessageRequestParams::getActions)
-      .containsExactly("SonarQube Notification: message", Arrays.asList(browseAction, settingsAction));
+      .containsExactly("SonarQube Notification: message", List.of(browseAction, settingsAction));
 
     verify(client).openConnectionSettings(false);
   }
 
   @Test
   void shouldShowSonarCloudNotificationToUserAndNotClickOnNotification() {
-    ServerNotifications.EventListener listener = underTest.new EventListener(true);
-    String category = "category";
-    String message = "message";
-    String link = "http://some.link";
-    String projectKey = "projectKey";
-    ServerNotification notification = new DefaultServerNotification(category, message, link, projectKey, ZonedDateTime.now());
+    var listener = underTest.new EventListener(true);
+    var category = "category";
+    var message = "message";
+    var link = "http://some.link";
+    var projectKey = "projectKey";
+    var notification = new DefaultServerNotification(category, message, link, projectKey, ZonedDateTime.now());
 
-    MessageActionItem browseAction = new MessageActionItem("Show on SonarCloud");
+    var browseAction = new MessageActionItem("Show on SonarCloud");
     when(client.showMessageRequest(any())).thenReturn(CompletableFuture.completedFuture(null));
-    MessageActionItem settingsAction = new MessageActionItem("Open Settings");
+    var settingsAction = new MessageActionItem("Open Settings");
 
     listener.handle(notification);
 
     verify(telemetry).devNotificationsReceived(category);
-    ArgumentCaptor<ShowMessageRequestParams> messageCaptor = ArgumentCaptor.forClass(ShowMessageRequestParams.class);
+    var messageCaptor = ArgumentCaptor.forClass(ShowMessageRequestParams.class);
     verify(client).showMessageRequest(messageCaptor.capture());
-    ShowMessageRequestParams shownMessage = messageCaptor.getValue();
+    var shownMessage = messageCaptor.getValue();
     assertThat(shownMessage).extracting(ShowMessageRequestParams::getMessage, ShowMessageRequestParams::getActions)
-      .containsExactly("SonarCloud Notification: message", Arrays.asList(browseAction, settingsAction));
+      .containsExactly("SonarCloud Notification: message", List.of(browseAction, settingsAction));
     verify(telemetry, never()).devNotificationsClicked(category);
   }
 
